--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!-- src/main/resources/templates/index.html -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colligify Me</title>
-</head>
-<body>
-    <h1>Welcome to Colligify Me!</h1>
-    <!-- Add your HTML content here -->
-</body>
-</html>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F4QbFTOdrw46gUTCfX4DpAB%2FUntitled%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DWYMU37HsyYN9bJGR-1" allowfullscreen></iframe>
